objects/Portal_Business_Org_Style__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Specifies style sheet used by portal home page based on Business Org</description>
    <fields>
        <fullName>Business_Org__c</fullName>
        <label>Business Org</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfItems__c</fullName>
        <description>number of items to show in each panel on the home page. Used in PartnerPortalHomeComponentCtrl</description>
        <label>NumberOfItems</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stylesheet_Resource__c</fullName>
        <label>Stylesheet Resource</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions_Visualforce_Page__c</fullName>
        <label>Terms and Conditions Visualforce Page</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Portal Business Org Style</label>
</CustomObject>